// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib > should generate a well formatted report with empty root 1`] = `
"<table>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/create3/Create3Factory.sol:Create3Factory">Create3Factory</strong></td>
        <td>224263</td>
        <td>1151</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>create(bytes32,bytes)</td>
        <td>286388</td>
        <td>296666</td>
        <td>287062</td>
        <td>397068</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictAddress(address,bytes32)</td>
        <td>1024</td>
        <td>1024</td>
        <td>1024</td>
        <td>1024</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/ProxyAdmin.sol:ProxyAdmin">ProxyAdmin</strong></td>
        <td>0</td>
        <td>0</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>owner()</td>
        <td>386</td>
        <td>386</td>
        <td>386</td>
        <td>386</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/TransparentProxyFactory.sol:TransparentProxyFactory">TransparentProxyFactory</strong></td>
        <td>1609662</td>
        <td>8244</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>createDeterministic(address,address,bytes,bytes32)</td>
        <td>574115</td>
        <td>534507</td>
        <td>574589</td>
        <td>574703</td>
        <td>6</td>
      </tr>
      <tr>
        <td>createDeterministicProxyAdmin(address,bytes32)</td>
        <td>421268</td>
        <td>421658</td>
        <td>421850</td>
        <td>421856</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictCreateDeterministic(address,address,bytes,bytes32)</td>
        <td>12057</td>
        <td>12057</td>
        <td>12057</td>
        <td>12057</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictCreateDeterministicProxyAdmin(bytes32)</td>
        <td>6236</td>
        <td>6236</td>
        <td>6236</td>
        <td>6236</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/TransparentUpgradeableProxy.sol:TransparentUpgradeableProxy">TransparentUpgradeableProxy</strong></td>
        <td>0</td>
        <td>0</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>getFoo()</td>
        <td>1042</td>
        <td>1042</td>
        <td>1042</td>
        <td>1042</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="test/OwnableWithGuardian.t.sol:ImplOwnableWithGuardian">ImplOwnableWithGuardian</strong></td>
        <td>285211</td>
        <td>1067</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>guardian()</td>
        <td>2286</td>
        <td>2286</td>
        <td>2286</td>
        <td>2286</td>
        <td>1</td>
      </tr>
      <tr>
        <td>owner()</td>
        <td>2341</td>
        <td>2341</td>
        <td>2341</td>
        <td>2341</td>
        <td>1</td>
      </tr>
      <tr>
        <td>updateGuardian(address)</td>
        <td>25944</td>
        <td>28245</td>
        <td>28283</td>
        <td>30394</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="test/PermissionlessRescuable.t.sol:TestPermissionlessRescuable">TestPermissionlessRescuable</strong></td>
        <td>879072</td>
        <td>4033</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>emergencyEtherTransfer(uint256)</td>
        <td>59057</td>
        <td>59900</td>
        <td>59900</td>
        <td>60743</td>
        <td>2</td>
      </tr>
      <tr>
        <td>emergencyTokenTransfer(address,uint256)</td>
        <td>34213</td>
        <td>50627</td>
        <td>51185</td>
        <td>65925</td>
        <td>4</td>
      </tr>
      <tr>
        <td>receive()</td>
        <td>0</td>
        <td>0</td>
        <td>0</td>
        <td>0</td>
        <td>1</td>
      </tr>
      <tr>
        <td>whoShouldReceiveFunds()</td>
        <td>2566</td>
        <td>2566</td>
        <td>2566</td>
        <td>2566</td>
        <td>1</td>
      </tr></table>"
`;

exports[`lib > should generate a well formatted report with existing root 1`] = `
"<table>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/create3/Create3Factory.sol:Create3Factory">Create3Factory</strong></td>
        <td>224263</td>
        <td>1151</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>create(bytes32,bytes)</td>
        <td><sup title="296388">↓-3.4%</sup>286388</td>
        <td>296666</td>
        <td>287062</td>
        <td><sup title="297068">↑34%</sup>397068</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictAddress(address,bytes32)</td>
        <td>1024</td>
        <td>1024</td>
        <td>1024</td>
        <td>1024</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/ProxyAdmin.sol:ProxyAdmin">ProxyAdmin</strong></td>
        <td>0</td>
        <td>0</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>owner()</td>
        <td>386</td>
        <td>386</td>
        <td>386</td>
        <td>386</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/TransparentProxyFactory.sol:TransparentProxyFactory">TransparentProxyFactory</strong></td>
        <td>1609662</td>
        <td><sup title="7244">↑14%</sup>8244</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>createDeterministic(address,address,bytes,bytes32)</td>
        <td>574115</td>
        <td>534507</td>
        <td>574589</td>
        <td>574703</td>
        <td>6</td>
      </tr>
      <tr>
        <td>createDeterministicProxyAdmin(address,bytes32)</td>
        <td>421268</td>
        <td>421658</td>
        <td>421850</td>
        <td>421856</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictCreateDeterministic(address,address,bytes,bytes32)</td>
        <td>12057</td>
        <td>12057</td>
        <td>12057</td>
        <td>12057</td>
        <td>6</td>
      </tr>
      <tr>
        <td>predictCreateDeterministicProxyAdmin(bytes32)</td>
        <td>6236</td>
        <td>6236</td>
        <td>6236</td>
        <td>6236</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="src/contracts/transparent-proxy/TransparentUpgradeableProxy.sol:TransparentUpgradeableProxy">TransparentUpgradeableProxy</strong></td>
        <td>0</td>
        <td>0</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>getFoo()</td>
        <td>1042</td>
        <td>1042</td>
        <td>1042</td>
        <td>1042</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="test/OwnableWithGuardian.t.sol:ImplOwnableWithGuardian">ImplOwnableWithGuardian</strong></td>
        <td>285211</td>
        <td>1067</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>guardian()</td>
        <td>2286</td>
        <td>2286</td>
        <td>2286</td>
        <td>2286</td>
        <td>1</td>
      </tr>
      <tr>
        <td>owner()</td>
        <td>2341</td>
        <td>2341</td>
        <td>2341</td>
        <td>2341</td>
        <td>1</td>
      </tr>
      <tr>
        <td>updateGuardian(address)</td>
        <td>25944</td>
        <td>28245</td>
        <td>28283</td>
        <td>30394</td>
        <td>6</td>
      </tr>
      <tr>
        <th colspan="4">Contract</th>
        <th>gas</th>
        <th>size</th>
      </tr>
      <tr>
        <td colspan="4"><strong title="test/PermissionlessRescuable.t.sol:TestPermissionlessRescuable">TestPermissionlessRescuable</strong></td>
        <td>879072</td>
        <td>4033</td>
      </tr>
      <tr>
        <th>Method</th>
        <th>min</th>
        <th>mean</th>
        <th>median</th>
        <th>max</th>
        <th>calls</th>
      </tr>
      <tr>
        <td>emergencyEtherTransfer(uint256)</td>
        <td>59057</td>
        <td>59900</td>
        <td>59900</td>
        <td>60743</td>
        <td>2</td>
      </tr>
      <tr>
        <td>emergencyTokenTransfer(address,uint256)</td>
        <td>34213</td>
        <td>50627</td>
        <td>51185</td>
        <td>65925</td>
        <td>4</td>
      </tr>
      <tr>
        <td>receive()</td>
        <td>0</td>
        <td>0</td>
        <td>0</td>
        <td>0</td>
        <td>1</td>
      </tr>
      <tr>
        <td>whoShouldReceiveFunds()</td>
        <td>2566</td>
        <td>2566</td>
        <td>2566</td>
        <td>2566</td>
        <td>1</td>
      </tr></table>"
`;
